# CreateSingleFiles

./: PathToText.py  README.md  pyproject.toml
