[project]
name = "createsinglefiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "keyring>=25.6.0",
    "markitdown>=0.0.2",
    "pygithub>=2.6.1",
    "requests>=2.32.3",
    "retry>=0.9.2",
]
